# building-test

./: .gitignore  README.md
deploy/: run_floor.sh  run_master.sh  setup_floor_pi.sh  setup_master_pi.sh
deploy/central/: .env.example  Dockerfile.city_sink  docker-compose.yml  entrypoint.sh
deploy/central/grafana/dashboards/: occ_overview.json
deploy/central/grafana/provisioning/dashboards/: dashboards.yml
deploy/central/grafana/provisioning/datasources/: influxdb.yml
deploy/zenoh/: floor_router.json5  master_router.json5
src/occ_building/: package.xml  requirements.txt  setup.cfg  setup.py
src/occ_building/launch/: building_master.launch.py  floor.launch.py
src/occ_building/occ_building/: building_master.py  floor_hardware.py  hardware.py  ina219.py
src/occ_building/occ_building/drivers/: base.py  ina219.py  mock.py  real.py
src/occ_building/params/: hospital.yaml
src/occ_central_hub/: package.xml  setup.cfg  setup.py
src/occ_central_hub/launch/: city_sink.launch.py
src/occ_central_hub/occ_central_hub/: city_sink.py
src/occ_interfaces/: CMakeLists.txt  package.xml
src/occ_interfaces/msg/: Aht20Status.msg  CityIngest.msg  EnvironmentState.msg  LedStatus.msg  LightingState.msg  MotionState.msg  PirStatus.msg  PowerState.msg  WattmeterStatus.msg  WindowState.msg  WindowStatus.msg
src/occ_interfaces/srv/: SetLeds.srv  SetLightingMode.srv  SetWindows.srv
